ms-product.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ms-product
  name: ms-product
  namespace: default 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-product
  template:
    metadata:
      labels:
        app: ms-product
    spec:
      containers:
        - image: fmastra22/ms-product
          name: products-service
          ports:
            - containerPort: 8080
              name: ms-product 
              protocol: TCP
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
# strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 25%
#       maxUnavailable: 25%
#   revisionHistoryLimit: 10
#   progressDeadlineSeconds: 600
#   paused: false
