products-service-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: products-service-example
  name: products-service-example
  namespace: 
spec:
  replicas: 0
  selector:
    matchLabels:
      app: products-service-example
  template:
    metadata:
      labels:
        app: products-service-example
    spec:
      containers:
      - name: products-service-example
        image: <Image>
        ports:
        - containerPort: <Port>
          name: 
          protocol: 
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
# strategy:
#     type: RollingUpdate
#     rollingUpdate:
#       maxSurge: 25%
#       maxUnavailable: 25%
#   revisionHistoryLimit: 10
#   progressDeadlineSeconds: 600
#   paused: false
