service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-product-svc
  labels:
     app: ms-product
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30002
    protocol: TCP
  selector:
     app: ms-product
