service.yml
apiVersion: v1
kind: Service
metadata:
  name: ms-product-svc
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ms-product
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    name: default
